--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="TextviewAdd">Ajout d\'un logement :</string>
     <string name="TextviewListe">Liste des logements :</string>
     <string name="title_activity_ajout_logement">AjoutLogement</string>
+    <string name="type_logement1">Appartement</string>
+    <string name="type_logement2">Studio</string>
+    <string name="type_logement3">Chambre chez l\'habitant</string>
+    <string name="Codepostal">CP :</string>
+    <string name="Ville">Ville :</string>
+    <string name="Rue">Rue :</string>
 </resources>
