--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name='Surfacelogement'>Surface :</string>
     <string name='NbPlaces'>Nb Places :</string>
     <string name='NbChambres'>Nb Chambres :</string>
+    <string name='MeubleStudio'>Studio Meublé :</string>
+    <string name='PartiesCommunesCCH'>Parties Communes :</string>
 
     <string-array name="villes_array">
         <item>Angers</item>
